--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 						<br></br>
 						My secondary work is in regularization methods (ridge regression) and the inverse problem that address noisy and highly correlated data or ill-conditioned design matrices, relevant to econometrics, image and sound recovery, and big data.  
 						<br></br>
-						In line with my research, I believe in making stem accessible and free in an inclusive learning environments. To this end I co-organize and teach for Pyladies NYC, have taught for Girls Who Code, and regularly volunteer and teach workshops on programming and data science. In my spare time I am automating watering my plants with a raspberry pi and practicing improv. I was also once a professional ballet dancer with <a href="https://www.sfballet.org">sfb</a>.
+						In line with my research, I believe in making stem accessible and free in an inclusive learning environments. To this end I co-organize and teach for Pyladies NYC, have taught for Girls Who Code, and regularly volunteer and teach workshops on programming and data science. In my spare time I am automating watering my plants with a raspberry pi and practicing <a href = "http://newyork.improvteams.com/performers/16N0"> improv</a>. I was also once a professional ballet dancer with <a href="https://www.sfballet.org">sfb</a>.
 						<br></br>
 						In the Fall 2017, I will be an Assistant Professor in the Department of Economics, Orfalea College of Business at California Polytechnic University. 
 
