this summer's farm

--- a/field.html
+++ b/field.html
@@ -102,7 +102,8 @@ Uganda (Oyam and Bukedea) “Female Farmer Training and Agricultural Productivit
 Gaspé, Quebec, Canada, Willing Workers on Organic Farms (serre et potager), Summer 2007
 <br></br>
 Sainte Foy de Belves, Dordogne, France, Willing Workers on Organic Farms (chevre et fromage), Summer 2016
-
+<br></br>
+Cauterets (Hautes-Pyrénées), France, Willing Workers on Organic Farms (conserves et jardin), Summer 2017
 	<br></br>				
 						
 					
