--- a/cv.html
+++ b/cv.html
@@ -57,7 +57,7 @@
 						
 						<h1><a href="https://github.com/kathrynthegreat/kathrynthegreat.github.io/blob/master/CV_Vasilaky.pdf"> <font color="#0183E5"><noframes></noframes> cv</font></a> </h1>
 						<p>
-						<img src="foura.jpg" style="width:250px;height:250;">
+						<img src="fourb.jpg" style="width:250px;height:250;">
 						</p>
 
 						</br>
