--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 						<br></br>
 						My secondary work is in regularization methods (ridge regression) and the inverse problem that address noisy and highly correlated data or ill-conditioned design matrices, relevant to econometrics, image and sound recovery, and big data.  
 						<br></br>
-						In line with my research, I believe in making stem accessible and free in an inclusive learning environments. To this end I co-organize and teach for Pyladies NYC, have taught for Girls Who Code, and regularly volunteer and teach workshops on programming and data science. 
+						In line with my research, I believe in making stem accessible and free in an inclusive learning environments. To this end I co-organize and teach for Pyladies NYC, have taught for Girls Who Code, and regularly volunteer and teach workshops on programming (mostly in python) and data science. 
 						<br></br>
 
 
