--- a/index.html
+++ b/index.html
@@ -59,12 +59,15 @@
 						<h1>bio</h1>
 						
 						<p>			
-						My research studies applied social science questions for economic development often with a quantitative approach (social network analysis, experimental design, bayesian modeling, and regularization). I have a BA in mathematics and economics and a PhD in agricultural and resource economics. My research topics are situated in experimental and development economics, utilizing lab experiments in the field, randomized control trials (RCT), primarily in India and Sub-Saharan Africa, and quasi-randomized designs examining how social networks and group behavior affect the take-up of new agricultural technologies. My current work builds on this by testing the framing of information with regards to resource management, some via web applicationas and information communication technologies that I've built. 
+						I am an Assistant Professor at the Department of Economics, Orfalea College of Business, Cal Poly.
 						<br></br>
-						My secondary work is in regularization methods (ridge regression) and the inverse problem that address noisy and highly correlated data or ill-conditioned design matrices, relevant to econometrics, image and sound recovery, and big data.  
+						My research topics are situated in experimental and development economics, utilizing lab experiments in the field, randomized control trials (RCT), primarily in India and Sub-Saharan Africa, and quasi-randomized designs. I'm interested in how social networks and group behavior affect information sharing and technology adoption, and how this differs across gender. My current work builds on this by testing the framing of information with regards to resource management, some via web applicationas and information communication technologies that I've built. 
 						<br></br>
-						In line with my research, I believe in making stem accessible and free in an inclusive learning environments. To this end I co-organize and teach for Pyladies NYC, have taught for Girls Who Code, and regularly volunteer and teach workshops on programming (mostly in python) and data science. 
+						My secondary work is in regularization methods (ridge regression/tikhanov) and the inverse problem that address noisy and highly correlated data or ill-conditioned design matrices, relevant to non-parametric statistics, and big data.  
 						<br></br>
+						In line with my research, I believe in making stem accessible and free in an inclusive learning environments. To this end I've co-organize and taught for Pyladies NYC, Girls Who Code, and regularly volunteer and teach workshops on programming (mostly in python) and data science. In my spare time I've automated my raspberry pi to water my plants so I can do more improv theater. 
+						<br></br>
+
 
 
 						</p>
