--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 						<br></br>
 						My secondary work is in regularization methods (ridge regression/tikhanov) and the inverse problem that address noisy and highly correlated data or ill-conditioned design matrices, relevant to non-parametric statistics, and big data.  
 						<br></br>
-						In line with my research, I believe in making stem accessible and free in an inclusive learning environments. To this end I've co-organize and taught for Pyladies NYC, Girls Who Code, and regularly volunteer and teach workshops on programming (mostly in python) and data science. In my spare time I've automated my raspberry pi to water my plants so I can do more improv theater. 
+						In line with my research, I believe in making stem accessible and free in an inclusive learning environments. To this end I've co-organize and taught for Pyladies NYC, Girls Who Code, and regularly volunteer and teach workshops on programming (mostly in python) and data science. In my spare time I've automated my raspberry pi to water my plants so I can do more improv. 
 						<br></br>
 
 
