world development accepted

--- a/publications.html
+++ b/publications.html
@@ -62,7 +62,7 @@
 	<br></br>
 	Vasilaky, Kathryn, Rahel Diro, Michael Norton, Geoff McCarnery, and Daniel Osgood, "Educational Games in Ethiopia, Scaling the Demand for Index Insurance," R&R, <em>Journal of Development Studies</em>, (2016).
 	<br></br>
-	Vasilaky, Kathryn and Asif Islam, "By Team or By Tournament? <a href="teams.pdf">Incentives for Sharing Information in an Experimental Game,</a>" R&R, <em>World Development</em>, (2017).
+	Vasilaky, Kathryn and Asif Islam, "By Team or By Tournament? <a href="teams.pdf">Incentives for Sharing Information in an Experimental Game,</a>" <em>World Development, forthcoming</em>, (2017).
 	<br></br>
 	Vasilaky, Kathryn, "Female Social Networks and Farmer Training: Can Randomized Information Exchange Improve Outcomes?"<em> American Journal of Agricultural Economics, (2013) 95(2): 376-383.</em>
 	<br></br>
