--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 						<h1>bio</h1>
 						
 						<p>			
-						I am an Assistant Professor at the Department of Economics, Orfalea College of Business, Cal Poly. I completed my BA in mathematics and economics from Columbia University, my PhD in agricultural and resource economics from the University of Maryland, and held a postdoc at the Earth Institute, Columbia Univeristy. 
+						I am an Assistant Professor at the Department of Economics, Orfalea College of Business, Cal Poly.
 						<br></br>
-						My research topics are situated in experimental and development economics, utilizing lab experiments in the field, randomized control trials (RCT), primarily in India and Sub-Saharan Africa, and quasi-randomized designs. I'm interested in how social networks and group behavior affect information sharing and technology adoption, and how this differs across gender. My current work builds on this by testing the framing of information with regards to resource management, some via web applicationas and information communication technologies that I've built. 
+						My research topics are situated in experimental and development economics, utilizing lab experiments in the field, randomized control trials (RCT), primarily in India and Sub-Saharan Africa, and quasi-randomized designs. I'm interested in how social networks and group behavior affect information sharing and technology adoption, and how this differs across gender. 
 						<br></br>
 						My secondary work is in regularization methods (ridge regression/tikhanov) and the inverse problem that address noisy and highly correlated data or ill-conditioned design matrices, relevant to non-parametric statistics.  
 						<br></br>
