--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						<h1>bio</h1>
 						
 						<p>			
-						I am an Assistant Professor at the Department of Economics, Orfalea College of Business, Cal Poly.
+						I am an Assistant Professor at the Department of Economics, Orfalea College of Business, Cal Poly. I teach Econ 201 and <a href="http://catalog.calpoly.edu/search/?P=ECON%20395">Econ 395</a>. 
 						<br></br>
 						My research topics are situated in experimental and development economics, utilizing lab experiments in the field, randomized control trials (RCT), primarily in India and Sub-Saharan Africa, and quasi-randomized designs. I'm interested in how social networks and group behavior affect information sharing and technology adoption, and how this differs across gender. 
 						<br></br>
