--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!http://www.dreamtemplate.com/templates/826/0825.html>
+and <!http://www.dreamtemplate.com/templates/826/0825.html>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -61,9 +61,9 @@
 						<p>			
 						I am an Assistant Professor at the Department of Economics, Orfalea College of Business, Cal Poly, where I teach Econ 201 and <a href="http://catalog.calpoly.edu/search/?P=ECON%20395">Econ 395</a>. 
 						<br></br>
-						My research topics are situated in experimental and development economics, utilizing lab experiments in the field, randomized control trials (RCT), primarily in India and Sub-Saharan Africa, and quasi-randomized designs. I'm interested in how social networks and group behavior affect information sharing and technology adoption, and how this differs across gender. 
+						My research topics are situated in experimental and development economics, utilizing lab experiments in the field, and randomized control trials (RCT). I'm interested in how social networks and group behavior affect information sharing and technology adoption, and how this differs across gender. 
 						<br></br>
-						My secondary work is in regularization methods (ridge regression/tikhanov) and the inverse problem that address noisy and highly correlated data or ill-conditioned design matrices, relevant to non-parametric statistics.  
+						My secondary work is in regularization methods (ridge regression/tikhanov) and the inverse problem that address noisy and highly correlated data or ill-conditioned design matrices, relevant to high dimensional problems that occur in estimating, for example, heterogenous treatment effects, or multiple splines in non-parametric statistics.  
 						<br></br>
 						In line with my research, I believe in making stem accessible and free in an inclusive learning environments. To this end I've co-organized and taught for Pyladies NYC, Girls Who Code, and regularly volunteer and teach workshops on programming (mostly in python) and data science. In my spare time I like to program apps, practice improv, and volunteer. 
 						<br></br>
