--- a/teaching.html
+++ b/teaching.html
@@ -92,7 +92,7 @@ March 25, 2017
 <a href="https://www.meetup.com/learn-python-nyc/events/235849052/">Big Ill (conditioned) Data - What to Do? @ 15Five @ Fueled Collective </a>
 <br></br>
 December 17, 2016
-<a href="http://www.meetup.com/NYC-PyLadies/events/">Not so Fast, Under the Hood of Apps in Flask, Tutorial @ Chart Beat</a>, <a href="https://github.com/kathrynthegreat/katya_flask_tutorial"> Part I & II</a>, <a href= "https://github.com/kathrynthegreat/anotherform_deployed"> III </a>
+<a href="https://www.meetup.com/NYC-PyLadies/events/236163728/">Not so Fast, Under the Hood of Apps in Flask, Tutorial @ Chart Beat</a>, <a href="https://github.com/kathrynthegreat/katya_flask_tutorial"> Part I & II</a>, <a href= "https://github.com/kathrynthegreat/anotherform_deployed"> III </a>
 <br></br>
 November 14, 2016
 <a href="https://www.meetup.com/NYC-PyLadies/events/235485741/">Transitioning to Coding @ HighTower</a>
