--- a/teaching.html
+++ b/teaching.html
@@ -63,7 +63,7 @@
 Columbia University, Earth Institute, Co-Instructor (with Joel Cohen and Jason Wong), SDEV W2300-Challenges of Sustainable Development, Spring 2016
 
 	<br></br>
-U.S. Naval Academy, Annapolis, MD, Adjunct Professor, Intermediate Statistics, Spring 2011
+U.S. Naval Academy, Annapolis, MD, Intermediate Statistics, Spring 2011
 	<br></br>
 <h1>guest lectures</h1>
 Columbia University, Statistics Department, Guest Lecturer, W4242-Introduction to Data Science (Instructors: Rachel Schutt and Kayur Patel), November 2013
