--- a/cv.html
+++ b/cv.html
@@ -64,7 +64,7 @@
 
 						<h1><a href="github.com/kathrynthegreat"> <font color="#0183E5"><noframes></noframes> git </font></a> </h1>
 						<p>
-						<img src="cat_dot.jpg" style="width:300px;height:300;">
+						<img src="technicaldifficulties.jpg" style="width:300px;height:300;">
 						</p>
 						
 						
