--- a/cv.html
+++ b/cv.html
@@ -57,7 +57,7 @@
 						
 						<h1><a href="https://github.com/kathrynthegreat/kathrynthegreat.github.io/blob/master/CV_Vasilaky_2.pdf"> <font color="#0183E5"><noframes></noframes> cv</font></a> </h1>
 						<p>
-						<img src="kv.jpg" style="width:300px;height:30;">
+						<img src="kv.png" style="width:300px;height:30;">
 						</p>
 
 						</br>
