pygotham video added

--- a/posts.html
+++ b/posts.html
@@ -79,7 +79,7 @@ Conference Speaker, <a href="https://sites.google.com/a/brown.edu/neudc-2015/hom
 <br></br>
 Conference Speaker, <a href="http://utdallas.edu/~jdf130030/2015_ESA_North-America_Dallas.pdf">North-American Economic Science Association</a>, Motherhood, Sisterhood and Adolescence: Is Competitiveness Socialized? Economics Science Association, Dallas, Texas, 10/24/15
 <br></br>
-Speaker, <a href="https://2015.pygotham.org/talks/207/an-iterative-approach-to/">An Iterative Approach to Inverse Problems using Python's Numpy, </a>Pygotham, New York NY 8/15/15
+Speaker, <a href="https://2015.pygotham.org/talks/207/an-iterative-approach-to/">An Iterative Approach to Inverse Problems using Python's Numpy, </a> <a href="http://pyvideo.org/pygotham-2015/an-iterative-approach-to-inverse-problems-using-p.html"> Video </a> Pygotham, New York NY 8/15/15
 <br></br>
 Seminar Speaker, As Good as the Networks They Keep? Mechanisms of Information Exchange in Social Networks in Rural Uganda, Microsoft Research New York, New York 2015, 8/15
 <br></br>
