--- a/publications.html
+++ b/publications.html
@@ -58,11 +58,11 @@
 <p>
 	Vasilaky, Kathryn and Kenneth Leonard, <a href = https://academiccommons.columbia.edu/catalog/ac:204118> "As Good as the Networks They Keep?: Improving Outcomes through Weak Ties in Uganda"</a> Forthcoming (2018), <em>Economic Development and Cultural Change</em>. (<a href="target_input_model.pdf">Supplementary derivations </a> for the Target-Input model with Bayesian updating)
 	<br></br>
-	Vasilaky, Kathryn and Asif Islam, "By Team or By Tournament? <a href="Experimental5-20-17.pdf">Incentives for Sharing Information in an Experimental Game,</a>" <em>World Development, forthcoming</em>, (2017).
+	Vasilaky, Kathryn and Asif Islam, "By Team or By Tournament? <a href="Experimental5-20-17.pdf">Incentives for Sharing Information in an Experimental Game, (2017) </a>" <em>World Development, forthcoming</em>.
 	<br></br>
-	Vasilaky, Kathryn, Rahel Diro, Michael Norton, Geoff McCarnery, and Daniel Osgood, "Educational Games in Ethiopia, Scaling the Demand for Index Insurance," R&R, <em>Journal of Development Studies</em>, (2016).
+	Vasilaky, Kathryn, Rahel Diro, Michael Norton, Geoff McCarnery, and Daniel Osgood, "Educational Games in Ethiopia, Scaling the Demand for Index Insurance," R&R, (2017) <em>Journal of Development Studies</em>.
 	<br></br>
-	Vasilaky, Kathryn, "Female Social Networks and Farmer Training: Can Randomized Information Exchange Improve Outcomes?"<em> American Journal of Agricultural Economics, (2013) 95(2): 376-383.</em>
+	Vasilaky, Kathryn, "Female Social Networks and Farmer Training: Can Randomized Information Exchange Improve Outcomes?" (2013) <em> American Journal of Agricultural Economics, 95(2): 376-383.</em>
 	<br></br>
 
 	<h1>working papers</h1>
@@ -70,7 +70,7 @@
 	<br></br>
 	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva and Kathryn Vasilaky, "<a href=http://papers.ccpr.ucla.edu/papers/PWP-MPRC-2016-005/PWP-MPRC-2016-005.pdf>Towards a Deeper Understanding of Female Competitiveness and the Gender Gap: Evidence from Patrilocal and Matrilocal Cultures using a Lab Experiment in the Field,</a>" (2017).
 	<br></br>
-	Buehren, Niklas and Markus P. Goldstein and Kenneth L. Leonard and Joao Montalvao and Kathryn Vasilaky, "<a href="http://papers.ssrn.com/sol3/papers.cfm?abstract_id=2811346">Female Competitiveness and Sibling Rivalry: Evidence from a Lab Experiment and Randomized Control Trial in Uganda</a>," (2017).
+	Buehren, Niklas and Markus P. Goldstein and Kenneth L. Leonard and Joao Montalvao and Kathryn Vasilaky, "<a href="http://papers.ssrn.com/sol3/papers.cfm?abstract_id=2811346">Female Competitiveness and Sibling Rivalry: Evidence from a Lab Experiment and Randomized Control Trial in Uganda</a>" (2017).
 	<br></br>
 
 	<h1>works in progress</h1>
@@ -80,7 +80,7 @@
 	<br></br>
 	Vasilaky, Kathryn and Aurelie Harou, Chia-Ying Lee, and Daniel Osgood, "Measuring the Impact of Timely Disaster Response in the Philippines using Weather Extremes,"<em> Working Paper, (2017)</em>.
 	<br></br>
-	Vasilaky, Kathryn and Elena Zheleva (2017), "Addressing Algorithmic Confounding in Data."
+	Vasilaky, Kathryn and Elena Zheleva, "Addressing Algorithmic Confounding in Data" (2018).
 	<br></br>
 
 <h1>unpublished papers</h1>
