added groundtruth, pydata slo"

--- a/index.html
+++ b/index.html
@@ -64,8 +64,14 @@
 						My research topics are situated in experimental and development economics, utilizing lab experiments in the field, and randomized control trials (RCT). I'm interested in how social networks and group behavior affect information sharing and technology adoption, and how this differs across gender. 
 						<br></br>
 						My secondary work is in regularization methods (ridge regression/tikhanov) and the inverse problem that address noisy and highly correlated data or ill-conditioned design matrices, relevant to high dimensional problems that occur in estimating, for example, heterogenous treatment effects, or multiple splines in non-parametric statistics.  
+						
 						<br></br>
-						In line with my research, I believe in making stem accessible and free in an inclusive learning environments. To this end I've co-organized and taught for Pyladies NYC, Girls Who Code, and regularly volunteer and teach workshops on programming (mostly in python) and data science. In my spare time I like to program apps, practice improv, and volunteer. 
+
+						In line with my research, I believe in making stem accessible and free in an inclusive learning environments. To this end I've co-organized and taught for Pyladies NYC, Girls Who Code, and regularly volunteer and teach workshops on programming (mostly in python) and data science. Here in SLO, we've just founded  <a href="https://www.meetup.com/PydataSLO/"> PyData SLO</a> with <a href="http://www.physics.calpoly.edu/faculty/bgranger"> Brian Granger</a>. 
+
+
+						In my residual time I am a co-founder of <a href="http://www.groundtruthdata.com/"> Ground Truth Data</a>, a startup that collects more granular weather data in less-developed countries to improve rainfall prediction; am an ensemble member of <a href="https://centralcoastcomedytheater.com/"> Central Coast Comedy</a>; volunteer for <a href="https://fcni.org//"> Family Care Network </a>; and have high hopes for using my using my raspberry pi to my water garden. 
+
 						<br></br>
 
 
