added groundtruth, pydata slo"

--- a/index.html
+++ b/index.html
@@ -70,14 +70,18 @@
 						In line with my research, I believe in making stem accessible and free in an inclusive learning environments. To this end I've co-organized and taught for Pyladies NYC, Girls Who Code, and regularly volunteer and teach workshops on programming (mostly in python) and data science. 
 
 
-<!-- Here in SLO, we've just founded  <a href="https://www.meetup.com/PydataSLO/"> PyData SLO</a> with <a href="http://www.physics.calpoly.edu/faculty/bgranger"> Brian Granger</a>.  -->
+<!-- Here in SLO, we've just founded  <a href="https://www.meetup.com/PydataSLO/"> PyData SLO</a> with <a href="http://www.physics.calpoly.edu/faculty/bgranger"> Brian Granger</a>. 
+
+for <a href="https://fcni.org//"> Family Care Network </a>
+
+ -->
 
 
 
 						
 
 						<br></br>
-						In my residual time I am a co-founder of <a href="http://www.groundtruthdata.com/"> Ground Truth Data</a>, a startup that collects more granular weather data in less-developed countries to improve rainfall prediction; am an ensemble member of <a href="https://centralcoastcomedytheater.com/"> Central Coast Comedy Theater</a>; volunteer for <a href="https://fcni.org//"> Family Care Network </a>; and have high hopes for using my using my raspberry pi to water my garden. 
+						In my residual time I am a co-founder of <a href="http://www.groundtruthdata.com/"> Ground Truth Data</a>, a startup that collects more granular weather data in less-developed countries to improve rainfall prediction; am an ensemble member of <a href="https://centralcoastcomedytheater.com/"> Central Coast Comedy Theater</a>; volunteer; and have high hopes for using my using my raspberry pi to automate watering my garden. 
 
 						<br></br>
 
