added groundtruth, pydata slo"

--- a/index.html
+++ b/index.html
@@ -70,16 +70,24 @@
 						
 						<br></br>
 
-						In line with my research, I believe in making stem accessible and free in an inclusive learning environments. To this end I've co-organized and taught for Pyladies NYC, Girls Who Code, and regularly volunteer and teach workshops on programming.
+						In line with my research, I believe in making stem accessible and free in an inclusive learning environments. To this end I co-organized and taught for Pyladies NYC and Girls Who Code. 
 
 
-<!-- Here in SLO, we've just founded  <a href="https://www.meetup.com/PydataSLO/"> PyData SLO</a> with <a href="http://www.physics.calpoly.edu/faculty/bgranger"> Brian Granger</a>. 
 
+
+<!-- 
+and recently co-founded <a href="https://www.meetup.com/PydataSLO/"> PyData SLO</a> with <a href="http://www.physics.calpoly.edu/faculty/bgranger"> Brian Granger</a>.
+
+Here in SLO, we've just founded  <a href="https://www.meetup.com/PydataSLO/"> PyData SLO</a> with <a href="http://www.physics.calpoly.edu/faculty/bgranger"> Brian Granger</a>. 
+
+and regularly volunteer and teach workshops on programming.
 for <a href="https://fcni.org//"> Family Care Network </a>
 
 (mostly in python) and data science. 
 
 	(ridge regression/tikhanov) and the inverse problem that address noisy and highly correlated data or ill-conditioned design matrices, relevant to high dimensional problems that occur in estimating, for example, heterogenous treatment effects, or multiple splines in non-parametric statistics.  
+
+	am an ensemble member of <a href="https://centralcoastcomedytheater.com/"> Central Coast Comedy Theater</a>; and volunteer for various organizations around SLO. 
  -->
 
 
@@ -87,7 +95,7 @@ for <a href="https://fcni.org//"> Family Care Network </a>
 						
 
 						<br></br>
-						In my residual time I am a co-founder of <a href="http://www.groundtruthdata.com/"> Ground Truth Data</a>, a startup that collects more granular weather data in less-developed countries to improve rainfall prediction using low cost water sensors and crowd sourced citizen input; am an ensemble member of <a href="https://centralcoastcomedytheater.com/"> Central Coast Comedy Theater</a>; and volunteer for various organizations around SLO. 
+						I am also a co-founder of <a href="http://www.groundtruthdata.com/"> Ground Truth Data</a>, a startup that collects granular weather data in less-developed countries to improve rainfall prediction using low cost water sensors and crowd sourced citizen input.
 
 						<br></br>
 
