--- a/field.html
+++ b/field.html
@@ -74,7 +74,7 @@ PhD Thesis, World Bank DECRG (Markus Goldstein) Funding, Weak Ties and Technolog
 
 <h1>field work</h1>
 
-Dominican Republic (Northern) Group Insurance and Informal Networks. International Research Institute for Climate and Society, Columbia University, USAID and Reddom, January 2014 and September 2016.
+ (Northern) Group Insurance and Informal Networks. International Research Institute for Climate and Society, Columbia University, USAID and Reddom, January 2014 and September 2016.
 <br></br>
 Philippines (Manila) The Effects of Disaster Response on Poverty and Inequality. Earth Institute, Columbia University and World Bank Philippines, September 2015.
 <br></br>
