--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 						
 						<br></br>
 
-						In line with my research, I believe in making stem accessible and free in an inclusive learning environments. To this end I co-organized and taught for Pyladies NYC and Girls Who Code and co-run <a href="https://www.meetup.com/PydataSLO/"> PyData SLO</a>. 
+						In line with my research, I believe in making stem accessible and free in an inclusive learning environment. To this end I co-organized and taught for Pyladies NYC and Girls Who Code and co-run <a href="https://www.meetup.com/PydataSLO/"> PyData SLO</a>. 
 
 
 
