--- a/publications.html
+++ b/publications.html
@@ -67,7 +67,7 @@
 	<br></br>
 
 	<h1>working papers</h1>
-	Vasilaky, Kathryn and Daniel Osgood, "Diversification or Defection?: Randomizing Information About Members in Insurance Groups," (2017).
+	<!-- Vasilaky, Kathryn and Daniel Osgood, "Diversification or Defection?: Randomizing Information About Members in Insurance Groups," (2017).-->
 	<br></br>
 	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva and Kathryn Vasilaky, "<a href=http://papers.ccpr.ucla.edu/papers/PWP-MPRC-2016-005/PWP-MPRC-2016-005.pdf>Towards a Deeper Understanding of Female Competitiveness and the Gender Gap: Evidence from Patrilocal and Matrilocal Cultures using a Lab Experiment in the Field,</a>" (2017).
 	<br></br>
