--- a/publications.html
+++ b/publications.html
@@ -67,18 +67,20 @@
 	<br></br>
 
 	<h1>working papers</h1>
+	<br></br>
+	Hill, Ruth, Carolina Mejia-Mantilla, Kathryn Vasilaky , "<a href=http://papers.ccpr.ucla.edu/papers/PWP-MPRC-2016-005/PWP-MPRC-2016-005.pdf>Vanishing returns? Potential Returns and Constraints to Input Adoption Among Small-Holder Farmers in Uganda,</a>" (2018).
 	<!-- Vasilaky, Kathryn and Daniel Osgood, "Diversification or Defection?: Randomizing Information About Members in Insurance Groups," (2017).-->
 	<br></br>
 	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva and Kathryn Vasilaky, "<a href=http://papers.ccpr.ucla.edu/papers/PWP-MPRC-2016-005/PWP-MPRC-2016-005.pdf>Towards a Deeper Understanding of Female Competitiveness and the Gender Gap: Evidence from Patrilocal and Matrilocal Cultures using a Lab Experiment in the Field,</a>" (2017).
 	<br></br>
 	Buehren, Niklas and Markus P. Goldstein and Kenneth L. Leonard and Joao Montalvao and Kathryn Vasilaky, "<a href="http://papers.ssrn.com/sol3/papers.cfm?abstract_id=2811346">Female Competitiveness and Sibling Rivalry: Evidence from a Lab Experiment and Randomized Control Trial in Uganda</a>" (2017).
 	<br></br>
+	Vasilaky, Kathryn and Aurelie Harou, and Katherine Alfredo, "Water Depletion in Northern India: Myself or Others?"<em> Working Paper, (2017)</em>.
 
 	<h1>works in progress</h1>
 
 	Vasilaky, Kathryn, Kentaro Toyama, Tushi Baul and Dean Karlan, "Learning Digitally: Evaluating the Impact of Farmer Training via Mediated Videos?" Jameel Poverty Action Lab,<em> Working Paper, (2016)</em>, and <a href="https://www.socialscienceregistry.org/trials/313"> Social Registry Trial 313.</a>
-	<br></br>
-	Vasilaky, Kathryn and Aurelie Harou, and Katherine Alfredo, "Water Depletion in Northern India: Myself or Others?"<em> Working Paper, (2017)</em>.
+
 	<br></br>
 	Vasilaky, Kathryn, "A Generalized Ridge Regression Using an Iterative Solution: the Inverse Problem in Regression Analysis with a Stopping Rule," Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A194857">Working Paper</a></em>, (2016) and accompanying <a href="https://github.com/kathrynthegreat/InverseProblem">git repo</a>. 
 	<br></br>
@@ -87,7 +89,7 @@
 	Vasilaky, Kathryn and Elena Zheleva, "Addressing Algorithmic Confounding in Data" (2018).
 	<br></br>
 
-<h1>unpublished papers</h1>
+	<h1>unpublished papers</h1>
 	Shirley, Kenny, Kathryn Vasilaky, Helen Greatrex, and Daniel Osgood, "A Hierarchal Bayesian Model of Weather Prediction with Multiple Time Series," Earth Institute, Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A199595">Working Paper</a> (2016)</em>.
 		<br></br>
 	Vasilaky, Kathryn and Michelle Brock, "Traversing the Landscape of Statiscal Power," European Bank for Reconstruction and Development, and Columbia University, <em><a href="http://academiccommons.columbia.edu/catalog/ac%3A196085">Working Paper</a>, (2015)</em>.
@@ -95,9 +97,6 @@
 
 
 	<h1>reports</h1>
-	Meja-Mantilla, Carolina and Ruth Hill and Kathryn Vasilaky (2017). \Input Adoption among
-	Small-Holder Farmers: Potential and Constraints," Poverty and Equity Global Practice, Africa
-	Region, The World Bank.
 	<br></br>
 	Montalvao, Joao, Markus Goldstein, Kenneth Leonard and Kathryn Vasilaky, "Girls' Empowerment, Sibling Rivalry, and Competitiveness: Evidence from a Randomized Control Trial and a Lab Experiment in Uganda." World Bank Research Paper Vol. 12, No. 33, (2016) <em><a href="http://documents.worldbank.org/curated/en/743031468186845532/Womens-empowerment-sibling-rivalry-and-competitiveness-evidence-from-a-lab-experiment-and-a-randomized-control-trial-in-Uganda">Report</a></em>.
 	<br></br>
