--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 		<div id="title">
 				<a href="#"><img src="images/header2.png" alt="" border="0" title="" /></a><br />
-				<h1>kathryn (katya) <font color="#0183E5"><noframes></noframes> vasilaky</font></h1>
+				<h1>kathryn <font color="#d6c06e"><noframes></noframes> (katya)</font>  <font color="#0183E5"><noframes></noframes> vasilaky</font></h1>
 				<p>
 					
 				</p>
