--- a/publications.html
+++ b/publications.html
@@ -68,12 +68,12 @@
 
 	<h1>working papers</h1>
 	<br></br>
-	Hill, Ruth, Carolina Mejia-Mantilla, Kathryn Vasilaky , "<a href=http://papers.ccpr.ucla.edu/papers/PWP-MPRC-2016-005/PWP-MPRC-2016-005.pdf>Vanishing returns? Potential Returns and Constraints to Input Adoption Among Small-Holder Farmers in Uganda,</a>" (2018).
+	Hill, Ruth, Carolina Mejia-Mantilla, Kathryn Vasilaky , "Vanishing returns? Potential Returns and Constraints to Input Adoption Among Small-Holder Farmers in Uganda" (2018).
 	<!-- Vasilaky, Kathryn and Daniel Osgood, "Diversification or Defection?: Randomizing Information About Members in Insurance Groups," (2017).-->
 	<br></br>
-	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva and Kathryn Vasilaky, "<a href=http://papers.ccpr.ucla.edu/papers/PWP-MPRC-2016-005/PWP-MPRC-2016-005.pdf>Towards a Deeper Understanding of Female Competitiveness and the Gender Gap: Evidence from Patrilocal and Matrilocal Cultures using a Lab Experiment in the Field,</a>" (2017).
+	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva and Kathryn Vasilaky, "Towards a Deeper Understanding of Female Competitiveness and the Gender Gap: Evidence from Patrilocal and Matrilocal Cultures using a Lab Experiment in the Field" (2017).
 	<br></br>
-	Buehren, Niklas and Markus P. Goldstein and Kenneth L. Leonard and Joao Montalvao and Kathryn Vasilaky, "<a href="http://papers.ssrn.com/sol3/papers.cfm?abstract_id=2811346">Female Competitiveness and Sibling Rivalry: Evidence from a Lab Experiment and Randomized Control Trial in Uganda</a>" (2017).
+	Buehren, Niklas and Markus P. Goldstein and Kenneth L. Leonard and Joao Montalvao and Kathryn Vasilaky, "Female Competitiveness and Sibling Rivalry: Evidence from a Lab Experiment and Randomized Control Trial in Uganda" (2017).
 	<br></br>
 	Vasilaky, Kathryn and Aurelie Harou, and Katherine Alfredo, "Water Depletion in Northern India: Myself or Others?"<em> Working Paper, (2017)</em>.
 
