--- a/publications.html
+++ b/publications.html
@@ -96,7 +96,7 @@
 
 	<h1>reports</h1>
 	Meja-Mantilla, Carolina and Ruth Hill and Kathryn Vasilaky (2017). "Vanishing Returns? Potential Returns and Constraints to Input Adoption
-among Smallholder Farmers in Uganda." World Bank Research Paper Vol. 1, No. WPS8627, (2018) <em><a href="http://documents.worldbank.org/curated/en/726321540832524595/pdf/WPS8627.pdf">Report</a></em>.
+among Smallholder Farmers in Uganda." World Bank Research  Vol. 1, No. WPS8627, (2018) <em><a href="http://documents.worldbank.org/curated/en/726321540832524595/pdf/WPS8627.pdf">Report</a></em>.
 	<br></br>
 	Montalvao, Joao, Markus Goldstein, Kenneth Leonard and Kathryn Vasilaky, "Girls' Empowerment, Sibling Rivalry, and Competitiveness: Evidence from a Randomized Control Trial and a Lab Experiment in Uganda." World Bank Research Paper Vol. 12, No. 33, (2016) <em><a href="http://documents.worldbank.org/curated/en/743031468186845532/Womens-empowerment-sibling-rivalry-and-competitiveness-evidence-from-a-lab-experiment-and-a-randomized-control-trial-in-Uganda">Report</a></em>.
 	<br></br>
