--- a/links.html
+++ b/links.html
@@ -9,11 +9,7 @@
 <body>
 		<div id="title">
 				<a href="#"><img src="images/header2.png" alt="" border="0" title="" /></a><br />
-<<<<<<< HEAD
-				<h1>kathryn <font color="#0183E5"><noframes></noframes> vasilaky</font></h1>
-=======
 				<h1>kathryn <font color="#01a9e5"><noframes></noframes> (katya)</font>  <font color="#0183E5"><noframes></noframes> vasilaky</font></h1>
->>>>>>> baa43ca95cae885f198200345bcee6867fcf3937
 				<p>
 					
 				</p>
@@ -27,10 +23,6 @@
 							<div id="menu">
 								<a href="index.html">Home</a><br />
 								<a href="publications.html">Publications</a><br />
-<<<<<<< HEAD
-								<a href="research.html">Research</a><br />
-=======
->>>>>>> baa43ca95cae885f198200345bcee6867fcf3937
 								<a href="posts.html">Posts Us</a><br />
 
 				 			 </div>
@@ -61,6 +53,6 @@
 		</div>
 		
 <div id="footer">
-			Copyright © 2016 | All Rights Reserved </div>
+			Copyright Â© 2016 | All Rights Reserved </div>
 </body>
 </html>
