--- a/publications.html
+++ b/publications.html
@@ -59,18 +59,17 @@
 	Vasilaky, Kathryn and Asif Islam, "By Team or By Tournament? <a href= https://www.sciencedirect.com/science/article/pii/S0305750X17303479>Incentives for Sharing Information in an Experimental Game, (2018) </a>" <em>World Development, 103: 216-225.
 </em>
 	<br></br>
-	Vasilaky, Kathryn, Rahel Diro, Michael Norton, Geoff McCarnery, and Daniel Osgood, "Educational Games in Ethiopia, Scaling the Demand for Index Insurance," R&R, (2017) <em>Journal of Development Studies</em>.
-	<br></br>
 	Vasilaky, Kathryn, "Female Social Networks and Farmer Training: Can Randomized Information Exchange Improve Outcomes?" (2013) <em> American Journal of Agricultural Economics, 95(2): 376-383.</em>
 	<br></br>
 
 	<h1>working papers</h1>
 	<br></br>
+	Vasilaky, Kathryn, Rahel Diro, Michael Norton, Geoff McCarnery, and Daniel Osgood, "Educational Games in Ethiopia, Scaling the Demand for Index Insurance," R&R, (2017) <em>Journal of Development Studies</em>.
 	<br></br>
 	Hill, Ruth, Carolina Mejia-Mantilla andand Kathryn Vasilaky, "Vanishing Returns? Potential Returns and Constraints to Input Adoption among Smallholder Farmers in Uganda." World Bank Research Paper Vol. 1, No. 8627, (2018) <em><a href="http://documents.worldbank.org/curated/en/726321540832524595/Vanishing-Returns-Potential-Returns-and-Constraints-to-Input-Adoption-among-Smallholder-Farmers-in-Uganda">Report</a></em>.
 	<!-- Vasilaky, Kathryn and Daniel Osgood, "Diversification or Defection?: Randomizing Information About Members in Insurance Groups," (2017).-->
 	<br></br>
-	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva and Kathryn Vasilaky, "Towards a Deeper Understanding of Female Competitiveness and the Gender Gap: Evidence from Patrilocal and Matrilocal Cultures using a Lab Experiment in the Field" (2017).
+	<!--Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva and Kathryn Vasilaky, "Towards a Deeper Understanding of Female Competitiveness and the Gender Gap: Evidence from Patrilocal and Matrilocal Cultures using a Lab Experiment in the Field" (2017).-->
 	<br></br>
 	Montalvao, Joao, Markus Goldstein, Kenneth Leonard and Kathryn Vasilaky, "Girls' Empowerment, Sibling Rivalry, and Competitiveness: Evidence from a Randomized Control Trial and a Lab Experiment in Uganda." World Bank Research Paper Vol. 12, No. 33, (2016) <em><a href="http://documents.worldbank.org/curated/en/743031468186845532/Womens-empowerment-sibling-rivalry-and-competitiveness-evidence-from-a-lab-experiment-and-a-randomized-control-trial-in-Uganda">Report</a></em>.
 	<br></br>
