--- a/publications.html
+++ b/publications.html
@@ -66,12 +66,12 @@
 	<br></br>
 	Vasilaky, Kathryn, Rahel Diro, Michael Norton, Geoff McCarnery, and Daniel Osgood, "Educational Games in Ethiopia, Scaling the Demand for Index Insurance," R&R, (2017) <em>Journal of Development Studies</em>.
 	<br></br>
-	Hill, Ruth, Carolina Mejia-Mantilla andand Kathryn Vasilaky, "Vanishing Returns? Potential Returns and Constraints to Input Adoption among Smallholder Farmers in Uganda." World Bank Research Paper Vol. 1, No. 8627, (2018) <em><a href="http://documents.worldbank.org/curated/en/726321540832524595/Vanishing-Returns-Potential-Returns-and-Constraints-to-Input-Adoption-among-Smallholder-Farmers-in-Uganda">Report</a></em>.
+	Hill, Ruth, Carolina Mejia-Mantilla andand Kathryn Vasilaky, "Vanishing Returns? Potential Returns and Constraints to Input Adoption among Smallholder Farmers in Uganda." World Bank Research Paper Vol. 1, No. 8627, (2018) <em><a href="http://documents.worldbank.org/curated/en/726321540832524595/Vanishing-Returns-Potential-Returns-and-Constraints-to-Input-Adoption-among-Smallholder-Farmers-in-Uganda">Working Paper</a></em>.
 	<!-- Vasilaky, Kathryn and Daniel Osgood, "Diversification or Defection?: Randomizing Information About Members in Insurance Groups," (2017).-->
 	<br></br>
 	<!--Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva and Kathryn Vasilaky, "Towards a Deeper Understanding of Female Competitiveness and the Gender Gap: Evidence from Patrilocal and Matrilocal Cultures using a Lab Experiment in the Field" (2017).-->
 	<br></br>
-	Montalvao, Joao, Markus Goldstein, Kenneth Leonard and Kathryn Vasilaky, "Girls' Empowerment, Sibling Rivalry, and Competitiveness: Evidence from a Randomized Control Trial and a Lab Experiment in Uganda." World Bank Research Paper Vol. 12, No. 33, (2016) <em><a href="http://documents.worldbank.org/curated/en/743031468186845532/Womens-empowerment-sibling-rivalry-and-competitiveness-evidence-from-a-lab-experiment-and-a-randomized-control-trial-in-Uganda">Report</a></em>.
+	Montalvao, Joao, Markus Goldstein, Kenneth Leonard and Kathryn Vasilaky, "Girls' Empowerment, Sibling Rivalry, and Competitiveness: Evidence from a Randomized Control Trial and a Lab Experiment in Uganda." World Bank Research Paper Vol. 12, No. 33, (2016) <em><a href="http://documents.worldbank.org/curated/en/743031468186845532/Womens-empowerment-sibling-rivalry-and-competitiveness-evidence-from-a-lab-experiment-and-a-randomized-control-trial-in-Uganda">Working Paper</a></em>.
 	<br></br>
 	Vasilaky, Kathryn and Aurelie Harou, and Katherine Alfredo, "Water Depletion in Northern India: Myself or Others?"<em> Working Paper, (2017)</em>.
 
@@ -98,7 +98,7 @@
 	<br></br>
 	Vasilaky, Kathryn and Kenneth Leonard, "Improving Social Networks for Ugandan Farmers," Gender Innovation Lab Policy Brief, World Bank Report, (2016) <em><a href="http://www.worldbank.org/en/programs/africa-gender-innovation-lab/brief/improving-social-networks-for-ugandan-farmers#">Report</a></em>.
 	<br></br>
-	Vasilaky, Kathryn and Kenneth Leonard, "As good as the company they keep?: Improving farmers’ social networks ," Gender Innovation Lab Policy Brief, World Bank Research Paper 103850, (2016) <em><a href="http://documents.worldbank.org/curated/en/603951468197954484/As-good-as-the-company-they-keep-improving-farmers-social-networks">Report</a></em>.
+	Vasilaky, Kathryn and Kenneth Leonard, "As good as the company they keep?: Improving farmers’ social networks ," Gender Innovation Lab Policy Brief, World Bank Research Paper 103850, (2016) <em><a href="http://documents.worldbank.org/curated/en/603951468197954484/As-good-as-the-company-they-keep-improving-farmers-social-networks">Working Paper</a></em>.
 
 
 					
