--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						
 						<br></br>
 
-						In line with my research, I believe in making stem accessible and free in an inclusive learning environment. To this end I co-organized and taught for <font color="#0183E5"><noframes></noframes> <a href="https://www.meetup.com/NYC-PyLadies/"> Pyladies NYC</a></font> and <a href="https://girlswhocode.com"> Girls Who Code</a>, currently co-run <a href="https://www.meetup.com/PydataSLO/"> PyData SLO</a>, and I am a<a href="https://beaconmentors.calpoly.edu/network">Beacon</a> mentor for underrepresented students at Cal Poly. 
+						In line with my research, I believe in making stem accessible and free in an inclusive learning environment. To this end I co-ran<font color="#0183E5"><noframes></noframes> <a href="https://www.meetup.com/NYC-PyLadies/"> Pyladies NYC</a></font>, taught for<a href="https://girlswhocode.com"> Girls Who Code</a>, currently co-run <a href="https://www.meetup.com/PydataSLO/"> PyData SLO</a>, and am a<a href="https://beaconmentors.calpoly.edu/network">Beacon</a> mentor for underrepresented students at Cal Poly. 
 
 
 
