--- a/posts.html
+++ b/posts.html
@@ -55,7 +55,8 @@
 
 						
 <p>	
-
+Speaker, Groundwater Depletion in Northern India: Myself or Others? Sustainability and Development Conference, University of Michigan, Ann Harbor, Michigan, 11/09/18
+<br></br>
 Speaker, Groundwater Depletion in Northern India: Myself or Others? Advances in Field Experiments, Boston, Massachusetts, 10/05/18
 <br></br>
 Speaker, Learning Digitally via Mediated Farmer Edutainment in India. French Association for Environmental and Resource Economics, Axes-en-Provence, France, 09/30/18
