--- a/research.html
+++ b/research.html
@@ -20,8 +20,8 @@
 
 <body>
 		<div id="title">
-				<a href="#"><img src="images/header2.png" alt="" border="0" title="" /></a><br />
-				<h1>kathryn <font color="#0183E5"><noframes></noframes> vasilaky</font></h1>
+	<a href="#"><img src="images/header2.png" alt="" border="0" title="" /></a><br />
+				<h1><font color="#800000"><noframes></noframes> kathryn</font> <font color="#01a9e5"><noframes></noframes> (katya)</font>  <font color="#0183E5"><noframes></noframes> vasilaky</font></h1>
 				<p>
 					
 				</p>
