--- a/teaching.html
+++ b/teaching.html
@@ -59,6 +59,8 @@
 						<p>
 Cal Poly, Economics 395 Programming for Economics and Analytics, Spring 2017 - present
 <br></br>
+Cal Poly, Economics 201 Survey of Economics, Winter 2017 - present
+<br></br>
 Columbia University, Earth Institute, Co-Instructor (with Joel Cohen and Jason Wong), SDEV W2300-Challenges of Sustainable Development, Spring 2016
 
 	<br></br>
