--- a/publications.html
+++ b/publications.html
@@ -54,6 +54,9 @@
 <h1>publications</h1>
 						
 <p>
+	<br></br>
+	Vasilaky, Kathryn, Rahel Diro, Michael Norton, Geoff McCarnery, and Daniel Osgood, "Educational Games in Ethiopia, Scaling the Demand for Index Insurance," (2018) <em>Journal of Development Studies, forthcoming</em>.
+	<br></br>
 	Vasilaky, Kathryn and Kenneth Leonard, <a href = https://www.journals.uchicago.edu/doi/10.1086/697430> "As Good as the Networks They Keep?: Improving Outcomes through Weak Ties in Uganda"</a> (2018), <em>Economic Development and Cultural Change, 66(4): 755-792. </em>(<a href="target_input_model.pdf">Supplementary derivations </a> for the Target-Input model with Bayesian updating)
 	<br></br>
 	Vasilaky, Kathryn and Asif Islam, "By Team or By Tournament? <a href= https://www.sciencedirect.com/science/article/pii/S0305750X17303479>Incentives for Sharing Information in an Experimental Game, (2018) </a>" <em>World Development, 103: 216-225.
@@ -63,8 +66,6 @@
 	<br></br>
 
 	<h1>working papers</h1>
-	<br></br>
-	Vasilaky, Kathryn, Rahel Diro, Michael Norton, Geoff McCarnery, and Daniel Osgood, "Educational Games in Ethiopia, Scaling the Demand for Index Insurance," R&R, (2017) <em>Journal of Development Studies</em>.
 	<br></br>
 	Hill, Ruth, Carolina Mejia-Mantilla andand Kathryn Vasilaky, "Vanishing Returns? Potential Returns and Constraints to Input Adoption among Smallholder Farmers in Uganda." World Bank Research Paper Vol. 1, No. 8627, (2018) <em><a href="http://documents.worldbank.org/curated/en/726321540832524595/Vanishing-Returns-Potential-Returns-and-Constraints-to-Input-Adoption-among-Smallholder-Farmers-in-Uganda">Working Paper</a></em>.
 	<!-- Vasilaky, Kathryn and Daniel Osgood, "Diversification or Defection?: Randomizing Information About Members in Insurance Groups," (2017).-->
