--- a/publications.html
+++ b/publications.html
@@ -55,15 +55,15 @@
 						
 <p>
 	<br></br>
-	Vasilaky, Kathryn, Rahel Diro, Michael Norton, Geoff McCarnery, and Daniel Osgood, "Educational Games in Ethiopia, Scaling the Demand for Index Insurance," (2018) <em>Journal of Development Studies, forthcoming</em>.
+	Vasilaky, Kathryn, Rahel Diro, Michael Norton, Geoff McCarnery, and Daniel Osgood, "Educational Games in Ethiopia, Scaling the Demand for Index Insurance," (2018) <em> Journal of Development Studies, forthcoming</em>.
 	<br></br>
-	Vasilaky, Kathryn and Kenneth Leonard, <a href = https://www.journals.uchicago.edu/doi/10.1086/697430> "As Good as the Networks They Keep?: Improving Outcomes through Weak Ties in Uganda"</a> (2018), <em>Economic Development and Cultural Change, 66(4): 755-792. </em>
+	Vasilaky, Kathryn and Kenneth Leonard, "<a href = https://www.journals.uchicago.edu/doi/10.1086/697430> As Good as the Networks They Keep?: Improving Outcomes through Weak Ties in Uganda</a>," (2018) <em> Economic Development and Cultural Change, 66(4): 755-792. </em>
 	(<a href="target_input_model.pdf">Supplementary derivations </a> for the Target-Input model with Bayesian updating)
 	<br></br>
-	Vasilaky, Kathryn and Asif Islam, "By Team or By Tournament? <a href= https://www.sciencedirect.com/science/article/pii/S0305750X17303479>Incentives for Sharing Information in an Experimental Game</a>" <em>, (2018) World Development, 103: 216-225.
+	Vasilaky, Kathryn and Asif Islam, "<a href= https://www.sciencedirect.com/science/article/pii/S0305750X17303479>By Team or By Tournament? Incentives for Sharing Information in an Experimental Game</a>," (2018) <em> World Development, 103: 216-225.
 </em>
 	<br></br>
-	Vasilaky, Kathryn, <a href= https://academic.oup.com/ajae/article-abstract/95/2/376/70881?redirectedFrom=fulltext>Female Social Networks and Farmer Training: Can Randomized Information Exchange Improve Outcomes?</a>" <em>, (2013)  <em> American Journal of Agricultural Economics, 95(2): 376-383.</em>
+	Vasilaky, Kathryn, "<a href= https://academic.oup.com/ajae/article-abstract/95/2/376/70881?redirectedFrom=fulltext>Female Social Networks and Farmer Training: Can Randomized Information Exchange Improve Outcomes?</a>," (2013) <em> American Journal of Agricultural Economics, 95(2): 376-383.</em>
 
 
 
