--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
 				
 						<h1>bio</h1>
 						
-						<p>			
-						I am an Assistant Professor at the Department of Economics, Orfalea College of Business, Cal Poly.
+						<p>								
+
+						I am an <a href="https://www.cob.calpoly.edu/directory/profile/kathryn-vasilaky/">Assistant Professor</a> at the Department of Economics, Orfalea College of Business, Cal Poly.
 						 <!-- where I teach Econ 201 and <a href="http://catalog.calpoly.edu/search/?P=ECON%20395">Econ 395</a>.  -->
 						<br></br>
 						My research topics are situated in experimental and development economics, utilizing lab experiments in the field, and randomized control trials (RCT). My secondary work is in regularization methods that address ill-conditioned data, relevant to high dimensional problems.
